--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,45 @@
-.App {
-  text-align: center;
+body {
+  background-color: gray;
+  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  margin: 5px;
+}
+
+#editor {
+  border-radius: 10px;
+  min-height: 100vh;
+  width: 50%;
+  text-align: justify;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border: 5px solid gray;
+}
+
+#preview {
+  border: 5px solid gray;
+  border-radius: 10px;
+  min-height: 100vh;
+  width: 50%;
+  text-align: justify;
+  background-color: rgba(0, 0, 0, .7);
+  color: white;
+  padding: 10px;
+}
+
+#preview a {
+  text-decoration: underline;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and 
+  (max-width: 400px) {
+    .container {
+      flex-direction: column;
+    }
+  
 }
